# durabletask-rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  deny.toml
.github/workflows/: ci.yml
src/: api.rs  internal.rs  lib.rs
src/backend/: logger.rs  mod.rs  runtimestate.rs  workitem.rs
src/genproto/: microsoft.durabletask.implementation.protobuf.rs
