[package]
name = "durabletask"
authors = ["Mike Nguyen<hey@mike.ee>"]
version = "0.0.1"
rust-version = "1.56"
description = "An implementation of the Durable Task Framework in Rust"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mikeee/durabletask-rust"
readme = "README.md"
homepage = "https://github.com/mikeee/durabletask-rust"
documentation = "https://docs.rs/durabletask"
keywords = ["durable", "task", "framework"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gethostname = "0.4.3"
prost = "0.12.4"
prost-types = "0.12.4"
tonic = { version = "0.11.0", features = ["tls", "prost", "gzip"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[build-dependencies]
prost-build = { version = "0.12.4", optional = true }
tonic-build = { version = "0.11.0", optional = true }

[features]
generate = ["dep:tonic-build", "dep:prost-build"]
